--- a/package.json
+++ b/package.json
@@ -8,12 +8,15 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "12.0.7",
+    "next": "^12.1.4",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
+    "autoprefixer": "^10.4.4",
     "eslint": "8.4.1",
-    "eslint-config-next": "12.0.7"
+    "eslint-config-next": "12.0.7",
+    "postcss": "^8.4.12",
+    "tailwindcss": "^3.0.23"
   }
 }
